--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @bands.each do |band| %>
-    <li><%= band.name %></li>
+    <li><%= link_to band.name, band_url(band) %></li>
   <% end %>
 </ul>
