--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -5,3 +5,5 @@
     <li><%= link_to band.name, band_url(band) %></li>
   <% end %>
 </ul>
+
+<%= render :partial => "shared/create_new_link", locals: {name: @bands.first.class.name.downcase} %>
