--- a/app/views/bands/new.html.erb
+++ b/app/views/bands/new.html.erb
@@ -1,1 +1,1 @@
-<%= render :partial => "shared/new_form", locals: {object: @band} %>
+<%= render :partial => "shared/new_or_edit_form", locals: {object: @band, action: "Create"} %>
