--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -6,3 +6,5 @@
     <li><%= link_to album.name, album_url(album) %></li>
   <% end %>
 </ul>
+
+<%= render :partial => "shared/create_edit_link", locals: {name: @band.class.name.downcase} %>
