Move destroy button from partial to helper

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -9,4 +9,4 @@
 
 <%= render :partial => "shared/create_edit_link", locals: {name: @band.class.name.downcase} %>
 <br>
-<%= render :partial => "shared/create_destroy_link", locals: {object: @band} %>
+<%= destroy_button @band %>
