Move new link from partial to helper

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,9 +1,3 @@
-<h2>Bands</h2>
+<%= render :partial => "shared/index", locals: {objects: @bands} %>
 
-<ul>
-  <% @bands.each do |band| %>
-    <li><%= link_to band.name, band_url(band) %></li>
-  <% end %>
-</ul>
-
-<%= render :partial => "shared/create_new_link", locals: {name: @bands.first.class.name.downcase} %>
+<%= new_link @bands.first.class.name.downcase %>
