--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render :partial => "shared/new_or_edit_form", locals: {object: @album, action: "Update"} %>
+<%= render :partial => "shared/new_or_edit_album", locals: {album: @album, bands: @bands, locations: @locations, action: "Update"} %>
