--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,22 +1,1 @@
-<h2><%= "Create album" %></h2>
-
-<form action="<%= albums_url %>" method="post">
-  <label for="album_name">Album Name</label>
-  <input type="text">
-  <br>
-  <label for="band_id">Band Name</label>
-  <select>
-    <% @bands.each do |band| %>
-      <option value="<%= band.id %>"><%= band.name %></option>
-    <% end %>
-  </select>
-  <br>
-  <label for="location">Location</label>
-  <select>
-    <% @locations.each do |location| %>
-      <option value="<%= location %>"><%= location.capitalize %></option>
-    <% end %>
-  </select>
-  <br>
-  <input type="submit" value="Create Album">
-</form>
+<%= render :partial => "shared/new_or_edit_album", locals: {album: @album, bands: @bands, locations: @locations, action: "create"} %>
