Show tracks for each album on band show page

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -4,6 +4,11 @@
 <ul>
   <% @band.albums.each do |album| %>
     <li><%= link_to album.name, album_url(album) %></li>
+    <ul>
+      <% album.tracks.each do |track| %>
+      <li><%= link_to track.name, track_url(track)%></li>
+      <% end %>
+    </ul>
   <% end %>
 </ul>
 
