--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,5 +1,7 @@
 <h2><%= @album.name %></h2>
 
+Band: <%= link_to @album.band.name, band_url(@album.band)%>
+<br>
 Type: <%= @album.location %>
 
 <h3>Tracks</h3>
