Show band and album with links to them on each track show page

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,6 +1,8 @@
 <h2><%= @track.name %></h2>
 
-Name: <%= @track.name %>
+Band: <%= link_to @track.band.name, band_url(@track.band) %>
+<br>
+Album: <%= link_to @track.album.name, album_url(@track.album) %>
 <br>
 Lyrics:
 <br>
