Add support for displaying notes for a track

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -10,6 +10,15 @@ Lyrics:
 <br>
 <%= render :partial => "note", locals: {track: @track, note: @note, action: "create"} %>
 <br>
+<% @track.notes.each do |note| %>
+<ul>
+  Author: <%= note.user.email %>
+  <br>
+  <%= note.contents %>
+
+</ul>
+<% end %>
+
 <%= edit_link @track.class.name.downcase %>
 <br>
 <%= destroy_button @track if @user.admin %>
