Add NotesController#destroy method for creators of notes and for all admins

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -15,7 +15,7 @@ Lyrics:
   Author: <%= note.user.email %>
   <br>
   <%= note.contents %>
-
+  <%= destroy_button note if note.user_id == @user.id || @user.admin %>
 </ul>
 <% end %>
 
