--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -6,7 +6,7 @@ Album: <%= link_to @track.album.name, album_url(@track.album) %>
 <br>
 Lyrics:
 <br>
-<%= ugly_lyrics(@track.lyrics) if @track.lyrics %>
+<%= sanitize ugly_lyrics(@track.lyrics) if @track.lyrics %>
 <br>
 <%= render :partial => "note", locals: {track: @track, note: @note, action: "create"} %>
 <br>
